fixed css z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,7 @@ body {
 body * {
   padding: 0;
   margin: 0;
+  z-index: 50;
 }
 
 a, a:visited, a:active {
@@ -65,6 +66,7 @@ a:hover {
 }
 
 .datetime {
+  z-index: 100;
   width: auto;
 }
 
